# Movies_Analysis

./: Film_data.csv  README.md  blog_post_practice.txt  explore.ipynb  main.py  pyproject.toml
