[project]
name = "movies-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "ipykernel>=7.1.0",
    "lxml>=6.0.2",
    "lxml-html-clean>=0.4.3",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "requests-html>=0.10.0",
    "seaborn>=0.13.2",
]
